# oraculovision

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
oraculovision/: config.py  state.py
oraculovision/analysis/: profitability.py  sovereignty_score.py
oraculovision/data/: ocean.py  pyblock.py
oraculovision/node/: client.py
oraculovision/presentation/: sovereignty.py
oraculovision/screens/: block_detail_modal.py  help_screen.py  ocean_address_screen.py
oraculovision/services/: milestone_tracker.py  worker_monitor.py
oraculovision/ui/: app.py  commands.py  navigation.py  tooltips.py
oraculovision/ui/components/: __init__.py  live_indicator.py  metric_card.py  sovereign_status_bar.py
oraculovision/ui/screens/: block_explorer.py  dashboard.py  lite_dashboard.py  mempool_glass.py  mining.py  node_control.py  policies.py  spam_health.py  splash.py  tx_inspector.py
oraculovision/ui/theme/: sovereign.tcss
oraculovision/ui/widgets/: sidebar.py
oraculovision/utils/: markup.py
oraculovision/widgets/: anim.py  bip110_detector.py  block_template.py  datum_mining.py  live_charts.py  mempool_glass.py  node_status.py  treemap.py
tests/: test_anim.py  test_pyblock.py  test_state.py
tests/analysis/: test_profitability.py  test_sovereignty_score.py
tests/config/: test_config_ui.py
tests/services/: test_worker_monitor.py
tests/ui/: test_app_smoke.py  test_splash_screen.py
