[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oraculovision"
version = "2.4.0"
description = "Terminal dashboard (TUI) for Bitcoin Knots + BIP-110 + DATUM operators"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OraculoVision contributors" },
]
keywords = ["bitcoin", "knots", "bip-110", "datum", "tui", "textual", "mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.82.0",
    "textual-plotext>=0.2.0",
    "plotext>=5.2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
oraculovision = "oraculovision.app:run"

[project.urls]
Homepage = "https://github.com/MarcanoFilms/oraculovision"
Repository = "https://github.com/MarcanoFilms/oraculovision"
Issues = "https://github.com/MarcanoFilms/oraculovision/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["oraculovision*"]

[tool.setuptools.package-data]
oraculovision = ["theme.tcss", "ui/theme/sovereign.tcss", "ui/theme/stream.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
